refactor(python): configs dir, stubs deprecation, CI expansion, docs update
Steps 5, 10, 11 of codebase tidy-up:
- Step 5: Extract TUNED_BASELINE to configs/tuned_baseline.json; load at
  import time in experiment_common.py. Add run_condition_suite() as the
  canonical suite runner. Add DeprecationWarnings to experiment_utils.py
  and analysis_utils.py (still used by 3 scripts each — not deleted).
  Add configs/README.md with provenance table.
- Step 10: .gitignore — consolidate experiments/*.json/tsv rules from
  .git/info/exclude; add paper/main.pdf and paper/figures/*.pdf.
  check.sh — add Python ruff + pytest steps after Rust checks.
- Step 11: STRUCTURE.md — reflect constants.rs, metrics.rs single-source,
  configs/, scripts/figures/, scripts/analyses/ (planned), deprecated stubs.

All 33 Python tests pass; 165 Rust tests pass; clippy clean.

--- a/.gitignore
+++ b/.gitignore
@@ -23,22 +23,25 @@ build/
 /python/digital_life/*.dylib
 
 # Experiment output data
+# NOTE: .git/info/exclude used to have blanket rules; they are now consolidated here.
+/experiments/*.json
+/experiments/*.tsv
 /experiments/*.gz
 /experiments/logs/
 /experiments/*_part_*.json
-/experiments/*_normal*.json
-/experiments/*_no_*.json
-/experiments/*_off.json
-/experiments/*_on.json
-/experiments/*_sweep_*.json
-/experiments/*_step0.json
-/experiments/*_midrun.json
 # Keep manifest-bound source artifacts trackable.
 !/experiments/final_graph_normal.json
 !/experiments/evolution_long_normal.json
 !/experiments/evolution_long_no_evolution.json
 !/experiments/niche_normal.json
 !/experiments/niche_normal_long.json
+
+# Generated paper artifacts
+paper/main.pdf
+paper/figures/*.pdf
+
+# macOS junk in subdirectories
+docs/.DS_Store
 
 # LaTeX build artifacts
 paper/*.aux
