refactor: split world.rs, generate_figures.py, and analysis scripts into submodules
Steps 4, 6, 7 of the codebase tidy-up plan:

Step 4 — Rust world/ module extraction:
- Split 3309-line world.rs into world/mod.rs (<930 lines) + 6 phase
  files (nn_query, agent_state, boundary, metabolism, growth, environment)
  and world/tests.rs (1690 lines), using pub(in crate::world) visibility.
- All 148 Rust tests and 17 PyO3 tests pass; cargo clippy clean.

Step 6 — scripts/figures/ subpackage:
- Replaced 64 KB generate_figures.py monolith with 18 per-figure-family
  modules under scripts/figures/; generate_figures.py is now a thin
  dispatcher (~80 lines).  figures/__init__.py calls matplotlib.use("Agg")
  and FIG_DIR.mkdir before importing pyplot submodules.

Step 7 — scripts/analyses/ subpackage:
- Split analyze_results.py, analyze_coupling.py, analyze_phenotype.py
  into scripts/analyses/{results,coupling,phenotype}/ submodules.
- Top-level scripts are thin dispatchers; backward-compat re-exports
  maintained for scripts that import from them.

Supporting changes:
- tests_python/test_analyses.py: 24 hermetic tests for statistics and TE.
- test_analyze_results.py, test_post_merge_recommendations.py: updated
  @patch targets after module relocation.
- pyproject.toml: per-file-ignores for F403/F405 (figures wildcard imports),
  E402 (figures/__init__.py matplotlib-first, experiment_utils warn-first).
- ruff format: 41 files reformatted for consistency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,5 +24,15 @@ target-version = "py310"
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP", "B"]
 
+[tool.ruff.lint.per-file-ignores]
+# Figure modules intentionally use `from figures._shared import *` to access
+# shared constants (COLORS, LABELS, plt, FIG_DIR, …) without verbose explicit imports.
+"scripts/figures/*.py" = ["F403", "F405"]
+# figures/__init__.py must call matplotlib.use("Agg") and mkdir FIG_DIR before
+# importing any figure submodule that imports pyplot — E402 is intentional here.
+"scripts/figures/__init__.py" = ["E402", "F403", "F405"]
+# experiment_utils.py fires a DeprecationWarning before re-exporting — E402 is intentional.
+"scripts/experiment_utils.py" = ["E402"]
+
 [tool.pytest.ini_options]
 pythonpath = ["."]
