chore: allow criterion8_manifest.json in gitignore
The compact results manifest is the only criterion8 artifact that
belongs in the repo (per the gitignore pattern for other manifests
like coupling_analysis.json). Full per-seed JSONs remain gitignored.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ build/
 !/experiments/coupling_analysis.json
 !/experiments/final_graph_statistics.json
 !/experiments/final_statistics.json
+!/experiments/criterion8_manifest.json
 
 
 # IDE/editor
