feat(phase0): held-out seeds 100–129 + memory conditions for lifelikeness experiment
Phase 0 previously used calibration seeds 0–29, violating the architecture
invariant that held-out seeds 100–199 are required for published results.
This also adds memory-enabled conditions (normal_graph_memory,
shift_graph_memory) to test whether the 8th criterion closes the
life-likeness gap.

Changes:
- experiment_lifelikeness.py: Tier 1 seeds → range(100,130); add 2 memory conditions
- analyze_lifelikeness.py: extend to 4 conditions with pairwise MWU + Cohen's d
- fig_lifelikeness_gap.py: 4-panel figure comparing 7-criteria vs 7+memory
- generate_lifelikeness_manifest.py: new manifest generator with seed validation
- .gitignore: allow lifelikeness_manifest.json

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ build/
 !/experiments/final_graph_statistics.json
 !/experiments/final_statistics.json
 !/experiments/criterion8_manifest.json
+!/experiments/lifelikeness_manifest.json
 
 
 # IDE/editor
